<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="posCarrinho" Id="{846c8a73-d440-42fe-a20b-dd688f0ae5ff}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM posCarrinho
VAR
	timeCalc: TIME;
	bNotificaTime: BOOL:= TRUE;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[
///// CALCULO DE DEFINIÇÃO SE O PROCESSO PASSA DAS 36 HORAS LIMITES ----------------------------------------
timeCalc:= (gvl_p.arrStatusEstufas[0].prevFimSeca - systemtime_to_dt(gvl.fbGetLocalSystemTime.systemTime));
IF timeCalc < T#24H THEN
	bNotificaTime:= FALSE;
	ELSE
		bNotificaTime:= TRUE;
		
END_IF]]></ST>
    </Implementation>
    <LineIds Name="posCarrinho">
      <LineId Id="6" Count="0" />
      <LineId Id="16" Count="2" />
      <LineId Id="20" Count="0" />
      <LineId Id="22" Count="2" />
      <LineId Id="5" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>